// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Controller createStack calls Stack.create with correct parameters 1`] = `
Object {
  "another": "field",
  "datalabInfo": Object {
    "domain": "expectedDatalabDomain",
    "name": "expectedDatalabName",
  },
  "name": "expectedName",
  "projectKey": "project",
  "type": "jupyter",
}
`;

exports[`Stack Controller createStack calls stack repository with correct parameters 1`] = `
Array [
  Array [
    "project",
    "username",
    Object {
      "another": "field",
      "category": "ANALYSIS",
      "datalabInfo": Object {
        "domain": "expectedDatalabDomain",
        "name": "expectedDatalabName",
      },
      "internalEndpoint": "http://jupyter-expectedName.project",
      "name": "expectedName",
      "projectKey": "project",
      "status": "requested",
      "type": "jupyter",
      "url": "https://project-expectedName.datalabs.localhost",
    },
  ],
]
`;

exports[`Stack Controller createStack failed Stack.create requests are caught 1`] = `
Object {
  "message": "No stack definition for type jupyter",
}
`;

exports[`Stack Controller deleteStack calls Stack.delete with correct parameters 1`] = `
Object {
  "another": "field",
  "datalabInfo": Object {
    "domain": "expectedDatalabDomain",
    "name": "expectedDatalabName",
  },
  "name": "expectedName",
  "projectKey": "project",
  "type": "jupyter",
}
`;

exports[`Stack Controller deleteStack calls stack repository with correct parameters 1`] = `
Array [
  Array [
    "project",
    "username",
    Object {
      "another": "field",
      "datalabInfo": Object {
        "domain": "expectedDatalabDomain",
        "name": "expectedDatalabName",
      },
      "name": "expectedName",
      "projectKey": "project",
      "type": "jupyter",
    },
  ],
]
`;

exports[`Stack Controller deleteStack failed Stack.delete requests are caught 1`] = `
Object {
  "message": "No stack definition for type jupyter",
}
`;
